--- a/style.css
+++ b/style.css
@@ -1,3 +1,102 @@
 body{
+    min-height: 100vh;
+    margin: 0;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+    
+}   
+
+ul{
+    margin: 0;
+    padding: 0;
+}
+
+li{
+    margin: 0;
+    padding: 0;
+}
+
+p{
+    margin: 0;
+    padding: 0;
+}
+
+header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 16px 128px;
+    color: rgb(1, 107, 97);
+    background-color: #9ECFD4;
+    height: 40px;
+    
+}
+
+header p{
+    font-size: 20px;
+    font-weight: 800;
+}
+
+#main{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    padding: 16px auto;
+    
+    color: rgb(1, 107, 97);
+
+    
+}
+
+#main div{
+    display: flex;
+    padding: 100px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+    border-radius: 300px;
+    box-shadow: 0px 0px 100px 30px lightblue;
+}
+
+#mainText{
+
+    font-size: 35px;
+    padding: 16px;
+    margin: 12px;
+    text-align: center;
+    width: 600px;
+    margin: 6px;
+    
+}
+
+
+#main button{
+    flex: 1 1 40px;
+    padding: 16px 128px;
+
+    background-color: white;
+    border: 5px solid rgb(112, 178, 178);
+    border-radius: 10%;
+    font-size: 150%;
+    color: rgb(1, 107, 97);
+
+}
+
+footer{
+    display: flex;
+    justify-content: center;
+    padding-top: 10px;
+    height: 60px;
+
+    color: rgb(229, 233, 197);
+    background-color: rgb(1, 107, 97);
+
+    font-size: 20px;
 }
